create Pagination for client transactions and for manager users table